--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,32 @@
     text-align: left;
 }
 
+.react-pdf__Page__canvas {
+    width: 100% !important;
+    height: auto !important;
+    
+}
+.resume {
+    padding: 0rem !important;
+    width: 100% !important;
+    height: 100% !important;
+}
+
 @media (max-width: 768px) {
     .contact_chips{
         font-size: 0.6em;
     }
   }
+
+  /* @media (max-width: 300px) {
+    .react-pdf__Page__canvas {
+        width: 100% !important;
+        height: auto !important;
+        
+    }
+    .resume {
+        width: 100% !important;
+        height: 100% !important;
+        overflow: scroll !important;
+    }
+  } */
